--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "== README",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.11.1",
     "flux": "^2.1.1",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.29.5",
     "react-dom": "^15.1.0",
     "react-router": "^2.5.1",
     "webpack": "^1.13.1"
@@ -23,8 +24,5 @@
   "engines": {
     "node": "6.2.1",
     "npm": "3.9.3"
-  },
-  "scripts":{
-    "postinstall": "./node_modules/.bin/webpack"
   }
 }
