--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.5",
     "react-dom": "^15.1.0",
+    "react-joyride": "^1.4.7",
     "react-router": "^2.5.1",
     "webpack": "^1.13.1"
   },
